Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-6418-g1273bbe https://github.com/reactos/reactos/commit/1273bbe417825fa4d6d012c7d19c58637a02da46
Description
reactos-bootcd-0.4.15-dev-5709-g504bf68-x86-gcc-lin-dbg
From the "Folder pane" try to drag and drop one of the 5 "folder" objects in control panel (to the desktop or anywhere else)

This obviously fails (as expected) ...
... but ReactOS attemps to free an invalid Heap address :
Expected result based on Win2K3 : create a shortcut to this control panel item
err:(dll/win32/browseui/explorerband.cpp:1459) Entering drag |
fixme:(dll/win32/comctl32/imagelist.c:1003) DragLeave hWnd != DragEnter hWnd |
err:(dll/win32/shell32/droptargets/CFSDropTarget.cpp:43) Mistreating a pidl: |
-------- pidl=018943B8
|
[018943B8] size=0020 type=1f attr=0x00000000 name="{d20ea4e1-3957-11d2-a40b-0c5020524152}" ((null),(null)) |
(sdk/lib/rtl/heap.c:2304) HEAP: Trying to free an invalid address 013AE9EC! |
err:(dll/win32/shell32/droptargets/CFSDropTarget.cpp:99) SHFileOperationW failed with 0x5 |
Attachments
Issue Links
- blocks
-
CORE-11238 ReactOS Drag and Drop issues
-
- Untriaged
-
-
CORE-19063 Should create a link when when drag'n'dropping from Folder pane
-
- Open
-