[SHELL32_APITEST] Add test for Control Panel's GetDisplayNameOf (#5495)

New regression test for shell32!GetDisplayNameOf, showing that the return
value of the function will be 'S_FALSE' when the first argument is NULL.
Also, the returned STRRET structure data is not modified by this call.

CORE-18841